--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			border: 1px solid white;
 			border-radius: 10px;
 
-			width: 50px;
-			height: 50px;
+			width: 7ex;
+			height: 7ex;
 
 			display: flex;
 			justify-content: center;
