--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
 				</span>
 			</a>
 		</div>
+		<div onclick="markActive(this)">
+			<a href="https://m.wetterdienst.de/Wetter/Erlangen/" target="main">
+				<span>
+					Wetter
+				</span>
+			</a>
+		</div>
 	</nav>
 
 	<iframe name="main" src=""></iframe>
