Add more counties

--- a/corona.html
+++ b/corona.html
@@ -39,6 +39,57 @@
 
 		function mapIdToRkiObjectId(mapId) {
 			switch(mapId) {
+				 case 79: return 223; //"SK Ingolstadt",
+				 case 84: return 224; //"SK München",
+				 case 87: return 225; //"SK Rosenheim",
+				 case 69: return 226; //"LK Altötting",
+				 case 71: return 227; //"LK Berchtesgadener Land",
+				 case 70: return 228; //"LK Bad Tölz-Wolfratshausen",
+				 case 72: return 229; //"LK Dachau",
+				 case 73: return 230; //"LK Ebersberg",
+				 case 74: return 231; //"LK Eichstätt",
+				 case 75: return 232; //"LK Erding",
+				 case 76: return 233; //"LK Freising",
+				 case 77: return 234; //"LK Fürstenfeldbruck",
+				 case 78: return 235; //"LK Garmisch-Partenkirchen",
+				 case 80: return 236; //"LK Landsberg a.Lech",
+				 case 81: return 237; //"LK Miesbach",
+				 case 82: return 238; //"LK Mühldorf a.Inn",
+				 case 83: return 239; //"LK München",
+				 case 85: return 240; //"LK Neuburg-Schrobenhausen",
+				 case 86: return 241; //"LK Pfaffenhofen a.d.Ilm",
+				 case 88: return 242; //"LK Rosenheim",
+				 case 89: return 243; //"LK Starnberg",
+				 case 90: return 244; //"LK Traunstein",
+				 case 91: return 245; //"LK Weilheim-Schongau",
+				 case 61: return 246; //"SK Landshut",
+				 case 63: return 247; //"SK Passau",
+				 case 68: return 248; //"SK Straubing",
+				 case 57: return 249; //"LK Deggendorf",
+				 case 59: return 250; //"LK Freyung-Grafenau",
+				 case 60: return 251; //"LK Kelheim",
+ 				case 61:  return 246; //"SK Landshut",
+ 				case 63:  return 247; //"SK Passau",
+ 				case 68:  return 248; //"SK Straubing",
+ 				case 57:  return 249; //"LK Deggendorf",
+ 				case 59:  return 250; //"LK Freyung-Grafenau",
+ 				case 60:  return 251; //"LK Kelheim",
+ 				case 62:  return 252; //"LK Landshut",
+ 				case 64:  return 253; //"LK Passau",
+ 				case 65:  return 254; //"LK Regen",
+ 				case 66:  return 255; //"LK Rottal-Inn",
+ 				case 67:  return 256; //"LK Straubing-Bogen",
+ 				case 58:  return 257; //"LK Dingolfing-Landau",
+				case 106: return 258; //"SK Amberg",
+				case 110: return 259; //"SK Regensburg",
+				case 114: return 260; //"SK Weiden i.d.OPf.",
+				case 105: return 261; //"LK Amberg-Sulzbach",
+				case 107: return 262; //"LK Cham",
+				case 108: return 263; //"LK Neumarkt i.d.OPf.",
+   				case 109: return 264; //"LK Neustadt a.d.Waldnaab",
+				case 111: return 265; //"LK Regensburg",
+				case 112: return 266; //"LK Schwandorf",
+				case 113: return 267; //"LK Tirschenreuth",
 				case  92: return 268; //"SK Bamberg",
 				case  94: return 269; //"SK Bayreuth",
 				case  96: return 270; //"SK Coburg",
