--- a/corona.html
+++ b/corona.html
@@ -7,6 +7,9 @@
 			padding: 0;
 			margin: 0;
 			display: flex;
+
+			height: 100%;
+			width: 100%;
 		}
 
 	</style>
@@ -23,7 +26,7 @@
 </head>
 <body>
 
-	<div style="height: 800px; width: 1200px;">
+	<div style="height: 100%; width: 100%; background: rgb(56, 57, 57);">
 
 	</div>
 	<script>
