Load json using fetch

--- a/corona.html
+++ b/corona.html
@@ -10,9 +10,6 @@
 	<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
 		integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
 		crossorigin=""></script>
-   <script src="data.js"></script>
-   <script src="laender.js"></script>
-   <script src="RKI_Corona_Landkreise.json"></script>
 </head>
 <body>
 	<header>
@@ -27,5 +24,6 @@
 
 	<script src="map_helpers.js"></script>
 	<script src="map.js"></script>
+	<script> loadAndDisplayMap(); </script>
 </body>
 </html>
