Add scaffolding for other parts

--- a/corona.html
+++ b/corona.html
@@ -17,10 +17,20 @@
 		Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://experience.arcgis.com/experience/478220a4c454480e823b17327b2bf1d4/page/page_1/">RKI-Dashboard</a>, aber schneller.
 	</header>
 
-	<section class="map-section">
-		<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner</h2>
-		<div class="map"></div>
-	</section>
+	<main>
+		<section class="counties">
+			<h2>Auswahl pro Landkreis</h2>
+		</section>
+
+		<section class="data-age">
+			<h2>Datenstand</h2>
+		</section>
+
+		<section class="map-section">
+			<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner</h2>
+			<div class="map"></div>
+		</section>
+	</main>
 
 	<script src="map_helpers.js"></script>
 	<script src="map.js"></script>
