--- a/corona.html
+++ b/corona.html
@@ -32,8 +32,6 @@
 		</section>
 	</main>
 
-	<script src="map_helpers.js"></script>
-	<script src="map.js"></script>
-	<script> loadAndDisplayMap(); </script>
+	<script type="module" src="main.js"></script>
 </body>
 </html>
