--- a/corona.html
+++ b/corona.html
@@ -13,6 +13,12 @@
 	<main>
 		<section class="counties">
 			<h2>Auswahl pro Landkreis</h2>
+			<span class="label">
+				(<span class="label cases">Covid-19-Fälle</span> | <span class="label deaths">Todesfälle</span>)
+			</span>
+			<div class="scroll-container">
+				<table class="county-list"></table>
+			</div>
 		</section>
 
 		<section class="data-age">
