Load and display daily sums

--- a/corona.html
+++ b/corona.html
@@ -30,6 +30,20 @@
 			<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner</h2>
 			<div class="map"></div>
 		</section>
+
+		<section class="cases-section">
+			<h2>Covid-19-Fälle</h2>
+			<span class="daily-sum cases"></span>
+		</section>
+
+		<section class="deaths-section">
+			<h2>Covid-19-Todesfälle</h2>
+			<span class="daily-sum deaths"></span>
+		</section>
+
+		<section class="info-section">
+			<h2>Disclaimer</h2>
+		</section>
 	</main>
 
 	<script type="module" src="main.js"></script>
