Add diff to yesterday

--- a/corona.html
+++ b/corona.html
@@ -34,11 +34,15 @@
 		<section class="cases-section">
 			<h2>Covid-19-Fälle</h2>
 			<span class="daily-sum cases"></span>
+			<span class="daily-diff highlight"></span>
+			<span class="label">zum Vortag</span>
 		</section>
 
 		<section class="deaths-section">
 			<h2>Covid-19-Todesfälle</h2>
 			<span class="daily-sum deaths"></span>
+			<span class="daily-diff deaths"></span>
+			<span class="label">zum Vortag</span>
 		</section>
 
 		<section class="info-section">
