--- a/corona.html
+++ b/corona.html
@@ -47,6 +47,9 @@
 
 		<section class="info-section">
 			<h2>Disclaimer</h2>
+
+			Dieses Projekt ist in keiner Weise mit dem RKI verbunden, aber es werden die offiziellen RKI Daten geladen.
+			Keine Garantien für Richtigkeit der hier dargestellten Daten.
 		</section>
 	</main>
 
