--- a/corona.html
+++ b/corona.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./web_modules/leaflet/dist/leaflet.css"/>
 	<link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
