--- a/corona.html
+++ b/corona.html
@@ -4,6 +4,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./web_modules/leaflet/dist/leaflet.css"/>
 	<link rel="stylesheet" href="./style.css"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@0.7.7"></script>
 </head>
 <body>
 	<header>
@@ -51,6 +55,11 @@
 
 			Dieses Projekt ist in keiner Weise mit dem RKI verbunden, aber es werden die offiziellen RKI Daten geladen.
 			Keine Garantien für Richtigkeit der hier dargestellten Daten.
+		</section>
+
+		<section class="new-cases-per-day-section">
+			<h2>COVID-19-Fälle/Tag nach Erkrankungsbeginn, ersatzweise Meldedatum*</h2>
+			<canvas class="daily-new-cases-canvas" width="100%" height="100%"></canvas>
 		</section>
 	</main>
 
