Add labels for the daily infections chart

--- a/corona.html
+++ b/corona.html
@@ -56,6 +56,15 @@
 		<section class="new-cases-per-day-section">
 			<h2>COVID-19-Fälle/Tag nach Erkrankungsbeginn, ersatzweise Meldedatum*</h2>
 			<canvas class="daily-new-cases-canvas" width="100%" height="100%"></canvas>
+
+			<div class="chart-labels">
+				<div class="chart-label by-first-sickday"></div><span class="label">Erkrankungsbeginn</span>
+				<div class="chart-label by-notificationday"></div><span class="label">Meldedatum</span>
+			</div>
+
+			<span class="label">* Bei Fällen ohne Angaben zum Erkrankungsbeginn (Erkrankungsbeginn unbekannt bzw. Fälle ohne Symptome)
+			wird ersatzweise das Meldedatum verwendet.
+			Die abnehmende Fallzahl über die letzten Tage kann durch den Melde- und Übermittlungsverzug bedingt sein.</span>
 		</section>
 	</main>
 
