Fix height of chart area not resizing properly

--- a/corona.html
+++ b/corona.html
@@ -55,7 +55,9 @@
 
 		<section class="new-cases-per-day-section">
 			<h2>COVID-19-Fälle/Tag nach Erkrankungsbeginn, ersatzweise Meldedatum*</h2>
-			<canvas class="daily-new-cases-canvas" width="100%" height="100%"></canvas>
+			<div class="daily-new-cases-canvas-resize-container">
+				<canvas></canvas>
+			</div>
 
 			<div class="chart-labels">
 				<div class="chart-label by-first-sickday"></div><span class="label">Erkrankungsbeginn</span>
