Add county info scaffolding

--- a/corona.html
+++ b/corona.html
@@ -30,6 +30,20 @@
 		<section class="map-section">
 			<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner</h2>
 			<div class="map"></div>
+			<aside class="county-info">
+				<header>X</header>
+				<div>
+					<h3>Neumarkt i.d. OPf. Landkreis</h3>
+					<table>
+						<tr><th>Fälle</th><td>452</td></tr>
+						<tr><th>Fälle/100.000 EW</th><td>338,4</td></tr>
+						<tr><th>Fälle letzte 7 Tage/100.000 EW</th><td>32,2</td></tr>
+						<tr><th>Todesfälle</th><td>17</td></tr>
+						<tr><th>Einwohnerzahl</th><td>133.561</td></tr>
+						<tr><th>Aktualisierung</th><td>27.08.2020, 00:00 Uhr</td></tr>
+					</table>
+				</div>
+			</aside>
 		</section>
 
 		<section class="cases-section">
