--- a/corona.html
+++ b/corona.html
@@ -46,14 +46,14 @@
 			</aside>
 		</section>
 
-		<section class="cases-section">
+		<section class="cases-section summed-section">
 			<h2>Covid-19-Fälle</h2>
 			<span class="daily-sum cases"></span>
 			<span class="daily-diff highlight"></span>
 			<span class="label">zum Vortag</span>
 		</section>
 
-		<section class="deaths-section">
+		<section class="deaths-section summed-section">
 			<h2>Covid-19-Todesfälle</h2>
 			<span class="daily-sum deaths"></span>
 			<span class="daily-diff deaths"></span>
