Add a crude navigation

--- a/corona.html
+++ b/corona.html
@@ -85,11 +85,11 @@
 			</section>
 			
 			<nav class="section-nav">
-				<div class="active">Fälle/Tag (Erkrankung)</div>
-				<div>Fälle/Tag (Meldung)</div>
-				<div>Fälle kumuliert</div>
-				<div>Fälle/100.000 Einwohner</div>
-				<div>Disclaimer</div>
+				<div data-nav-group="development-graphs" data-nav-target="new-cases-per-day-section" class="active">Fälle/Tag (Erkrankung)</div>
+				<div data-nav-group="development-graphs" data-nav-target="newly-reported-cases-per-day">Fälle/Tag (Meldung)</div>
+				<div data-nav-group="development-graphs" data-nav-target="total-cases">Fälle kumuliert</div>
+				<div data-nav-group="development-graphs" data-nav-target="total-cases-per-100k">Fälle/100.000 Einwohner</div>
+				<div data-nav-group="development-graphs" data-nav-target="disclaimer">Disclaimer</div>
 			</nav>
 		</div>
 	</main>
