Add total reported cases per day graph

--- a/corona.html
+++ b/corona.html
@@ -67,10 +67,10 @@
 			Keine Garantien für Richtigkeit der hier dargestellten Daten.
 		</section>
 
-		<div class="development-graphs">
-			<section class="new-cases-per-day-section">
+		<div class="development-graphs navigatable">
+			<section class="new-cases-per-day-section active">
 				<h2>COVID-19-Fälle/Tag nach Erkrankungsbeginn, ersatzweise Meldedatum*</h2>
-				<div class="daily-new-cases-canvas-resize-container">
+				<div class="canvas-resize-container">
 					<canvas></canvas>
 				</div>
 
@@ -83,11 +83,20 @@
 				wird ersatzweise das Meldedatum verwendet.
 				Die abnehmende Fallzahl über die letzten Tage kann durch den Melde- und Übermittlungsverzug bedingt sein.</span>
 			</section>
+
+			<section class="total-reported-cases-per-day-section">
+				<h2>COVID-19-Fälle kumuliert *</h2>
+				<div class="canvas-resize-container">
+					<canvas></canvas>
+				</div>
+
+				<span class="label">* Gesamtplus der Fälle zum Vortag verteilt sich auf versch. Tage aufgrund des Übermittlungsprozesses.</span>
+			</section>
 			
 			<nav class="section-nav">
 				<div data-nav-group="development-graphs" data-nav-target="new-cases-per-day-section" class="active">Fälle/Tag (Erkrankung)</div>
 				<div data-nav-group="development-graphs" data-nav-target="newly-reported-cases-per-day">Fälle/Tag (Meldung)</div>
-				<div data-nav-group="development-graphs" data-nav-target="total-cases">Fälle kumuliert</div>
+				<div data-nav-group="development-graphs" data-nav-target="total-reported-cases-per-day-section">Fälle kumuliert</div>
 				<div data-nav-group="development-graphs" data-nav-target="total-cases-per-100k">Fälle/100.000 Einwohner</div>
 				<div data-nav-group="development-graphs" data-nav-target="disclaimer">Disclaimer</div>
 			</nav>
