Add chart displaying the reported cases per day

--- a/corona.html
+++ b/corona.html
@@ -84,6 +84,15 @@
 				Die abnehmende Fallzahl über die letzten Tage kann durch den Melde- und Übermittlungsverzug bedingt sein.</span>
 			</section>
 
+			<section class="newly-reported-cases-per-day-section">
+				<h2>COVID-19-Fälle/Tag nach Meldedatum*</h2>
+				<div class="canvas-resize-container">
+					<canvas></canvas>
+				</div>
+
+				<span class="label">* Gesamtplus der Fälle zum Vortag verteilt sich auf versch. Tage (orangene Balken) aufgrund des Übermittlungsprozesses.</span>
+			</section>
+
 			<section class="total-reported-cases-per-day-section">
 				<h2>COVID-19-Fälle kumuliert *</h2>
 				<div class="canvas-resize-container">
@@ -92,10 +101,10 @@
 
 				<span class="label">* Gesamtplus der Fälle zum Vortag verteilt sich auf versch. Tage aufgrund des Übermittlungsprozesses.</span>
 			</section>
-			
+
 			<nav class="section-nav">
 				<div data-nav-group="development-graphs" data-nav-target="new-cases-per-day-section" class="active">Fälle/Tag (Erkrankung)</div>
-				<div data-nav-group="development-graphs" data-nav-target="newly-reported-cases-per-day">Fälle/Tag (Meldung)</div>
+				<div data-nav-group="development-graphs" data-nav-target="newly-reported-cases-per-day-section">Fälle/Tag (Meldung)</div>
 				<div data-nav-group="development-graphs" data-nav-target="total-reported-cases-per-day-section">Fälle kumuliert</div>
 				<div data-nav-group="development-graphs" data-nav-target="total-cases-per-100k">Fälle/100.000 Einwohner</div>
 				<div data-nav-group="development-graphs" data-nav-target="disclaimer">Disclaimer</div>
