Add most hit counties chart

--- a/corona.html
+++ b/corona.html
@@ -102,11 +102,18 @@
 				<span class="label">* Gesamtplus der Fälle zum Vortag verteilt sich auf versch. Tage aufgrund des Übermittlungsprozesses.</span>
 			</section>
 
+			<section class="total-cases-per-100k-section">
+				<h2>Am stärksten betroffene Landkreise COVID-19/100.000 Einwohner</h2>
+				<div class="canvas-resize-container">
+					<canvas></canvas>
+				</div>
+			</section>
+
 			<nav class="section-nav">
 				<div data-nav-group="development-graphs" data-nav-target="new-cases-per-day-section" class="active">Fälle/Tag (Erkrankung)</div>
 				<div data-nav-group="development-graphs" data-nav-target="newly-reported-cases-per-day-section">Fälle/Tag (Meldung)</div>
 				<div data-nav-group="development-graphs" data-nav-target="total-reported-cases-per-day-section">Fälle kumuliert</div>
-				<div data-nav-group="development-graphs" data-nav-target="total-cases-per-100k">Fälle/100.000 Einwohner</div>
+				<div data-nav-group="development-graphs" data-nav-target="total-cases-per-100k-section">Fälle/100.000 Einwohner</div>
 				<div data-nav-group="development-graphs" data-nav-target="disclaimer">Disclaimer</div>
 			</nav>
 		</div>
