--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./web_modules/leaflet/dist/leaflet.css"/>
 	<link rel="stylesheet" href="./style.css"/>
