--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
 						<tr class="data-age-row"><th>Aktualisierung</th><td></td></tr>
 					</table>
 				</div>
-			</aside>
+      </aside>
+      <aside class="map-legend collapsed" onclick="this.classList.toggle('collapsed')">
+        <h3>Legende</h3>
+          Fälle letzte 7 Tage/100.000 EW
+          <div>                 0 <div class="legend-color" style="background: #d2d2d2;"></div></div>
+          <div> &gt;   0, &lt;=   5 <div class="legend-color" style="background: #d7d3af;"></div></div>
+          <div> &gt;   5, &lt;=  25 <div class="legend-color" style="background: #d7d288;"></div></div>
+          <div> &gt;  25, &lt;=  50 <div class="legend-color" style="background: #cd9406;"></div></div>
+          <div> &gt;  50, &lt;= 250 <div class="legend-color" style="background: #af2632;"></div></div>
+          <div> &gt; 250, &lt;= 500 <div class="legend-color" style="background: #8c0619;"></div></div>
+      </aside>
 		</section>
 
 		<section class="cases-section summed-section">
