Add fork me on github button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 	<link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-	<header>
+	<header class="page-header">
+    <button class="fork-me" onclick="document.location.href='https://github.com/t-animal/covid-karte'">
+      <img src="git-branch.svg"> me on <img src="logo-github.svg">
+    </button>
+
 		<h1>Ein performantes COVID-19-Dashboard</h1>
-		Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://experience.arcgis.com/experience/478220a4c454480e823b17327b2bf1d4/page/page_1/">RKI-Dashboard</a>, aber schneller.
+    Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://experience.arcgis.com/experience/478220a4c454480e823b17327b2bf1d4/page/page_1/">RKI-Dashboard</a>, aber schneller.
 	</header>
 
 	<main>
