--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
 
 		<section class="cases-section summed-section">
 			<h2>Covid-19-Fälle</h2>
-			<span class="daily-sum cases"></span>
-			<div class="daily-sum secondary-info cases no-data">aus total <span></span></div> 
+			<span class="daily-sum cases">&nbsp;</span>
+			<div class="daily-sum secondary-info cases no-data">aus total <span>&nbsp;</span></div> 
 
-			<span class="daily-diff highlight"></span>
-			<div class="daily-diff secondary-info highlight no-data">aus total <span></span></div> 
+			<span class="daily-diff highlight">&nbsp;</span>
+			<div class="daily-diff secondary-info highlight no-data">aus total <span>&nbsp;</span></div> 
 
 			<span class="label">zum Vortag</span>
 		</section>
 
 		<section class="deaths-section summed-section">
 			<h2>Covid-19-Todesfälle</h2>
-			<span class="daily-sum deaths"></span>
-			<div class="daily-sum secondary-info deaths no-data">aus total <span></span></div> 
+			<span class="daily-sum deaths">&nbsp;</span>
+			<div class="daily-sum secondary-info deaths no-data">aus total <span>&nbsp;</span></div> 
 
-			<span class="daily-diff deaths"></span>
-			<div class="daily-diff secondary-info deaths no-data">aus total <span></span></div> 
+			<span class="daily-diff deaths">&nbsp;</span>
+			<div class="daily-diff secondary-info deaths no-data">aus total <span>&nbsp;</span></div> 
 
 			<span class="label">zum Vortag</span>
 		</section>
